--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,6 +2,6 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 100 900;
-    src: url('./../../public/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetpye');
+    src: url('./../../public/fonts/Inter-VariableFont_opsz-wght.ttf') format('truetype');
     font-display: swap;
 }
